--- a/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
+++ b/Popular_Movies_Stage02/app/src/main/res/layout/fragment_movie_details.xml
@@ -64,10 +64,9 @@
         android:id="@+id/detail_fab_fav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite_heart_button"
+        android:src="@drawable/ic_favorite_white"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:onClick="onClickAddFavorite"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/tv_rating"
